--- a/port/drawings/drawing_01.html
+++ b/port/drawings/drawing_01.html
@@ -5,7 +5,8 @@
   <meta charset="utf-8">
   <title>69 international</title>
   <link rel="icon" href="favicon-96.png" sizes="96x96">
-  <link rel="stylesheet" type="text/css" href="/css/styles.css">
+  <link rel="stylesheet" type="text/css" href="/css/layouts.css">
+  <link rel="stylesheet" type="text/css" href="../css/drawings.css">
   <link href='//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css' rel='stylesheet' type='text/css'>
 </head>
 
