--- a/port/drawings/drawings_whole.html
+++ b/port/drawings/drawings_whole.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>69 international</title>
   <link rel="icon" href="favicon-96.png" sizes="96x96">
-  <link rel="stylesheet" type="text/css" href="../css/styles.css">
+  <link rel="stylesheet" type="text/css" href="../css/layouts.css">
   <link href='//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css' rel='stylesheet' type='text/css'>
 </head>
 
@@ -15,15 +15,15 @@
     <nav>
       <ul>
         <div class="section1">
-          <li><a href="main.html">Main</a></li>
+          <li><a href="../main.html">Main</a></li>
         </div>
 
         <div class="section2">
-          <li><a href="about.html">about</a></li>
+          <li><a href="../about.html">about</a></li>
         </div>
 
         <div class="section3">
-          <li><a href="drawings/drawings_whole.html">drawings</a></li>
+          <li><a href="drawings_whole.html">drawings</a></li>
         </div>
 
         <div class="section4">
