--- a/port/about.html
+++ b/port/about.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>69 international</title>
   <link rel="icon" href="favicon-96.png" sizes="96x96">
-  <link rel="stylesheet" type="text/css" href="/css/layouts.css">
+  <link rel="stylesheet" type="text/css" href="css/layouts.css">
   <link href='//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css' rel='stylesheet' type='text/css'>
 </head>
 
