--- a/port/drawings/drawings_whole.html
+++ b/port/drawings/drawings_whole.html
@@ -23,7 +23,7 @@
         </div>
 
         <div class="section3">
-          <li><a href="drawings_whole.html">drawings</a></li>
+          <li><a href="drawings_whole.html"> <img style="width:7%; height:25px" src="../main_button.png" alt="drawings"> </a></li>
         </div>
 
         <div class="section4">
@@ -36,11 +36,20 @@
           <li><a>Songs</a></li>
         </div>
 
+
       </ul>
     </nav>
   </aside>
 
   <div class="drawing-contents">
+    <img class="drawing-image" style="width:30%; height:auto" src="../about.png" alt="about">
+    <img class="drawing-image" style="width:30%; height:auto" src="../about.png" alt="about">
+    <img class="drawing-image" style="width:30%; height:auto" src="../about.png" alt="about">
+    <img class="drawing-image" style="width:30%; height:auto" src="../about.png" alt="about">
+    <img class="drawing-image" style="width:30%; height:auto" src="../about.png" alt="about">
+    <img class="drawing-image" style="width:30%; height:auto" src="../about.png" alt="about">
+    <img class="drawing-image" style="width:30%; height:auto" src="../about.png" alt="about">
+    <img class="drawing-image" style="width:30%; height:auto" src="../about.png" alt="about">
     <img class="drawing-image" style="width:30%; height:auto" src="../about.png" alt="about">
 
     <div class="drawing-text">
