--- a/port/main.html
+++ b/port/main.html
@@ -15,7 +15,7 @@
     <nav>
       <ul>
         <div class="section1">
-          <li><a href="main.html">Main</a></li>
+          <li><a href="main.html"> <img style="width:7%; height:25px" src="main_button.png" alt="Main"> </a></li>
         </div>
 
         <div class="section2">
