--- a/port/about.html
+++ b/port/about.html
@@ -19,7 +19,7 @@
         </div>
 
         <div class="section2">
-          <li><a href="about.html">about</a></li>
+          <li><a href="about.html"> <img style="width:7%; height:25px" src="main_button.png" alt="about"> </a></li>
         </div>
 
         <div class="section3">
