--- a/port/about.html
+++ b/port/about.html
@@ -11,42 +11,52 @@
 
 <body>
 
-  <aside class="sidebar">
-    <nav>
-      <ul>
-        <div class="section1">
-          <li><a href="main.html">Main</a></li>
-        </div>
+  <div class="grid">
 
-        <div class="section2">
-          <li><a href="about.html"> <img style="width:7%; height:25px" src="main_button.png" alt="about"> </a></li>
-        </div>
+    <aside class="sidebar">
+      <nav>
+        <ul>
+          <div class="section1">
+            <li><a href="main.html">Main</a></li>
+          </div>
 
-        <div class="section3">
-          <li><a href="drawings/drawings_whole.html">drawings</a></li>
-        </div>
+          <div class="section2">
+            <li><a href="about.html"> <img style="width:97px; height:30px;" src="main_button.png" alt="about"> </a></li>
+          </div>
 
-        <div class="section4">
-          <li><a>Books</a></li>
-          <li><a>- 50 quetions</a></li>
-          <li><a>- how to write a poem</a></li>
-        </div>
+          <div class="section3">
+            <li><a href="drawings/drawings_whole.html">drawings</a></li>
+          </div>
 
-        <div class="section5">
-          <li><a>Songs</a></li>
-        </div>
+          <div class="section4">
+            <li><a>Books</a></li>
+            <li><a>- 50 quetions</a></li>
+            <li><a>- how to write a poem</a></li>
+          </div>
 
-      </ul>
-    </nav>
-  </aside>
+          <div class="section5">
+            <li><a>Songs</a></li>
+          </div>
+          
+          <div class="section6">
+            <li>Ukgu(c) 2014-2017</li>
+          </div>
 
-  <div class="contents">
-    <img class="contents-image" style="width:30%; height:auto" src="about.png" alt="about">
 
-    <div class="contents-text">
-      <p>illustrator / sing-a-songwriter <br/>
-        email : ukgu.ugku@gmail.com <br/>
-        instagram : <a href="https://instagram.com/ukgu.ugku">ukgu.ugku</a></p>
+        </ul>
+      </nav>
+    </aside>
+
+    <div class="contents">
+      <img class="contents-image" style="width:500px; height:500px" src="about.png" alt="about">
+
+      <div class="contents-text">
+        <p>Ukgu [69]<br/>
+          illustrator / sing-a-songwriter <br/>
+          email : ukgu.ugku@gmail.com <br/>
+          instagram : <a href="https://instagram.com/ukgu.ugku">ukgu.ugku</a></p>
+      </div>
+
     </div>
 
   </div>
