--- a/port/drawings/drawings_whole.html
+++ b/port/drawings/drawings_whole.html
@@ -11,53 +11,55 @@
 
 <body>
 
-  <aside class="sidebar">
-    <nav>
-      <ul>
-        <div class="section1">
-          <li><a href="../main.html">Main</a></li>
-        </div>
+  <div class="grid">
 
-        <div class="section2">
-          <li><a href="../about.html">about</a></li>
-        </div>
+    <aside class="sidebar">
+      <nav>
+        <ul>
+          <div class="section1">
+            <li><a href="../main.html">Main</a></li>
+          </div>
 
-        <div class="section3">
-          <li><a href="drawings_whole.html"> <img style="width:7%; height:25px" src="../main_button.png" alt="drawings"> </a></li>
-        </div>
+          <div class="section2">
+            <li><a href="../about.html">about</a></li>
+          </div>
 
-        <div class="section4">
-          <li><a>Books</a></li>
-          <li><a>- 50 quetions</a></li>
-          <li><a>- how to write a poem</a></li>
-        </div>
+          <div class="section3">
+            <li><a href="drawings_whole.html"> <img style="width:97px; height:30px;" src="../main_button.png" alt="drawings"> </a></li>
+          </div>
 
-        <div class="section5">
-          <li><a>Songs</a></li>
-        </div>
+          <div class="section4">
+            <li><a>Books</a></li>
+            <li><a>- 50 quetions</a></li>
+            <li><a>- how to write a poem</a></li>
+          </div>
+
+          <div class="section5">
+            <li><a>Songs</a></li>
+          </div>
+
+          <div class="section6">
+            <li>Ukgu(c) 2014-2017</li>
+          </div>
 
 
-      </ul>
-    </nav>
-  </aside>
+        </ul>
+      </nav>
+    </aside>
 
-  <div class="drawing-contents">
-    <img class="drawing-image" style="width:30%; height:auto" src="../about.png" alt="about">
-    <img class="drawing-image" style="width:30%; height:auto" src="../about.png" alt="about">
-    <img class="drawing-image" style="width:30%; height:auto" src="../about.png" alt="about">
-    <img class="drawing-image" style="width:30%; height:auto" src="../about.png" alt="about">
-    <img class="drawing-image" style="width:30%; height:auto" src="../about.png" alt="about">
-    <img class="drawing-image" style="width:30%; height:auto" src="../about.png" alt="about">
-    <img class="drawing-image" style="width:30%; height:auto" src="../about.png" alt="about">
-    <img class="drawing-image" style="width:30%; height:auto" src="../about.png" alt="about">
-    <img class="drawing-image" style="width:30%; height:auto" src="../about.png" alt="about">
+    <div class="drawing-contents">
 
-    <div class="drawing-text">
-      <p>illustrator / sing-a-songwriter <br/>
-        email : ukgu.ugku@gmail.com <br/>
-        instagram : <a href="https://instagram.com/ukgu.ugku">ukgu.ugku</a></p>
+      <a href="main.html"><img class="drawing-image" src="../drawings_img/001.jpg" alt="001"></a>
+      <a href="main.html"><img class="drawing-image" src="../drawings_img/002.jpg" alt="002"></a>
+      <a href="main.html"><img class="drawing-image" src="../drawings_img/003.jpg" alt="003"></a>
+      <a href="main.html"><img class="drawing-image" src="../drawings_img/004.jpg" alt="004"></a>
+      <a href="main.html"><img class="drawing-image" src="../drawings_img/005.jpg" alt="005"></a>
+      <a href="main.html"><img class="drawing-image" src="../drawings_img/006.jpg" alt="006"></a>
+      <a href="main.html"><img class="drawing-image" src="../drawings_img/007.jpg" alt="007"></a>
+      <a href="main.html"><img class="drawing-image" src="../drawings_img/008.jpg" alt="008"></a>
+      <a href="main.html"><img class="drawing-image" src="../drawings_img/009.jpg" alt="009"></a>
+
     </div>
-
   </div>
 
 </body>
