--- a/port/main.html
+++ b/port/main.html
@@ -11,37 +11,50 @@
 
 <body>
 
-  <aside class="sidebar">
-    <nav>
-      <ul>
-        <div class="section1">
-          <li><a href="main.html"> <img style="width:7%; height:25px" src="main_button.png" alt="Main"> </a></li>
-        </div>
+  <div class="grid">
 
-        <div class="section2">
-          <li><a href="about.html">about</a></li>
-        </div>
+    <aside class="sidebar">
+      <nav>
+        <ul>
+          <div class="section1">
+            <li><a href="main.html"> <img style="width:97px; height:30px;" src="main_button.png" alt="Main"> </a></li>
+          </div>
 
-        <div class="section3">
-          <li><a href="drawings/drawings_whole.html">drawings</a></li>
-        </div>
+          <div class="section2">
+            <li><a href="about.html">about</a></li>
+          </div>
 
-        <div class="section4">
-          <li><a>Books</a></li>
-          <li><a>- 50 quetions</a></li>
-          <li><a>- how to write a poem</a></li>
-        </div>
+          <div class="section3">
+            <li><a href="drawings/drawings_whole.html">drawings</a></li>
+          </div>
 
-        <div class="section5">
-          <li><a>Songs</a></li>
-        </div>
+          <div class="section4">
+            <li><a>Books</a></li>
+            <li><a>- 50 quetions</a></li>
+            <li><a>- how to write a poem</a></li>
+          </div>
 
-      </ul>
-    </nav>
-  </aside>
+          <div class="section5">
+            <li><a>Songs</a></li>
+          </div>
 
-  <div class="contents">
-    <img style="width:60%; height:auto" src="main.jpg" alt="main">
+          <div class="section6">
+            <li>Ukgu(c) 2014-2017</li>
+          </div>
+
+        </ul>
+      </nav>
+    </aside>
+
+    <div class="contents">
+      <img class="contents-image" style="width:800px; height:600px" src="main.jpg" alt="main">
+
+      <div class="contents-text">
+        <p>I wish I was extinct</p>
+      </div>
+
+    </div>
+
   </div>
 
 </body>
