--- a/port/about.html
+++ b/port/about.html
@@ -25,7 +25,7 @@
           </div>
 
           <div class="section3">
-            <li><a href="drawings/drawings_whole.html">drawings</a></li>
+            <li><a href="drawings/drawing_whole.html">drawings</a></li>
           </div>
 
           <div class="section4">
@@ -35,9 +35,9 @@
           </div>
 
           <div class="section5">
-            <li><a>Songs</a></li>
+            <li><a href="songs.html">Songs</a></li>
           </div>
-          
+
           <div class="section6">
             <li>Ukgu(c) 2014-2017</li>
           </div>
