--- a/port/drawings/drawing_01.html
+++ b/port/drawings/drawing_01.html
@@ -1,30 +1,24 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-  <meta charset="utf-8">
-  <title>69 international</title>
-  <link rel="icon" href="favicon-96.png" sizes="96x96">
-  <link rel="stylesheet" type="text/css" href="/css/layouts.css">
-  <link rel="stylesheet" type="text/css" href="../css/drawings.css">
-  <link href='//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" type="text/css" href="../css/layouts.css">
+<link href='//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
+
+<div class="grid">
 
   <aside class="sidebar">
     <nav>
       <ul>
         <div class="section1">
-          <li><a href="main.html">Main</a></li>
+          <li><a href="../main.html">Main</a></li>
         </div>
 
         <div class="section2">
-          <li><a href="about.html">about</a></li>
+          <li><a href="../about.html">about</a></li>
         </div>
 
         <div class="section3">
-          <li><a href="drawings/drawings_whole.html">drawings</a></li>
+          <li><a href="drawing_whole.html"> <img style="width:97px; height:30px;" src="../main_button.png" alt="drawings"> </a></li>
         </div>
 
         <div class="section4">
@@ -34,21 +28,26 @@
         </div>
 
         <div class="section5">
-          <li><a>Songs</a></li>
+          <li><a href="../songs.html">Songs</a></li>
         </div>
+
+        <div class="section6">
+          <li>Ukgu(c) 2014-2017</li>
+        </div>
+
 
       </ul>
     </nav>
   </aside>
 
+
   <div class="drawing-contents">
-    <img class="drawing-image" style="width:30%; height:auto" src="/about.png" alt="about">
 
     <div class="drawing-text">
-      <p>illustrator / sing-a-songwriter <br/>
-        email : ukgu.ugku@gmail.com <br/>
-        instagram : <a href="https://instagram.com/ukgu.ugku">ukgu.ugku</a></p>
+      <p> <a href="drawing_whole.html">back</a> &nbsp &nbsp <a>previous</a> &nbsp &nbsp <a href="drawing_02.html">next</a> </p>
     </div>
+
+    <img class="drawing-image" src="../drawings_img/001.jpg" alt="001">
 
   </div>
 
