--- a/port/drawings/drawing_03.html
+++ b/port/drawings/drawing_03.html
@@ -7,9 +7,9 @@
   <link rel="icon" href="../favicon-96.png" sizes="96x96">
   <link rel="stylesheet" type="text/css" href="../css/layouts.css">
   <link href='//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css' rel='stylesheet' type='text/css'>
-</head>
+  </head>
 
-<body>
+  <body>
 
   <div class="grid">
 
@@ -25,7 +25,7 @@
           </div>
 
           <div class="section3">
-            <li><a href="drawings_whole.html"> <img style="width:97px; height:30px;" src="../main_button.png" alt="drawings"> </a></li>
+            <li><a href="drawing_whole.html"> <img style="width:97px; height:30px;" src="../main_button.png" alt="drawings"> </a></li>
           </div>
 
           <div class="section4">
@@ -35,7 +35,7 @@
           </div>
 
           <div class="section5">
-            <li><a>Songs</a></li>
+            <li><a href="../songs.html">Songs</a></li>
           </div>
 
           <div class="section6">
@@ -47,20 +47,16 @@
       </nav>
     </aside>
 
+
     <div class="drawing-contents">
 
-      <a href="main.html"><img class="drawing-image" src="../drawings_img/001.jpg" alt="001"></a>
-      <a href="main.html"><img class="drawing-image" src="../drawings_img/002.jpg" alt="002"></a>
-      <a href="main.html"><img class="drawing-image" src="../drawings_img/003.jpg" alt="003"></a>
-      <a href="main.html"><img class="drawing-image" src="../drawings_img/004.jpg" alt="004"></a>
-      <a href="main.html"><img class="drawing-image" src="../drawings_img/005.jpg" alt="005"></a>
-      <a href="main.html"><img class="drawing-image" src="../drawings_img/006.jpg" alt="006"></a>
-      <a href="main.html"><img class="drawing-image" src="../drawings_img/007.jpg" alt="007"></a>
-      <a href="main.html"><img class="drawing-image" src="../drawings_img/008.jpg" alt="008"></a>
-      <a href="main.html"><img class="drawing-image" src="../drawings_img/009.jpg" alt="009"></a>
+      <div class="drawing-text">
+        <p> <a href="drawing_whole.html">back</a> &nbsp &nbsp <a href="drawing_02.html">previous</a> &nbsp &nbsp <a href="drawing_04.html">next</a> </p>
+      </div>
+
+      <img class="drawing-image" src="../drawings_img/003.jpg" alt="003">
 
     </div>
-  </div>
 
 </body>
 
