--- a/port/drawings/drawing_09.html
+++ b/port/drawings/drawing_09.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="utf-8">
   <title>69 international</title>
-  <link rel="icon" href="favicon-96.png" sizes="96x96">
-  <link rel="stylesheet" type="text/css" href="css/layouts.css">
+  <link rel="icon" href="../favicon-96.png" sizes="96x96">
+  <link rel="stylesheet" type="text/css" href="../css/layouts.css">
   <link href='//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css' rel='stylesheet' type='text/css'>
-</head>
+  </head>
 
-<body>
+  <body>
 
   <div class="grid">
 
@@ -17,15 +17,15 @@
       <nav>
         <ul>
           <div class="section1">
-            <li><a href="main.html"> <img style="width:97px; height:30px;" src="main_button.png" alt="Main"> </a></li>
+            <li><a href="../main.html">Main</a></li>
           </div>
 
           <div class="section2">
-            <li><a href="about.html">about</a></li>
+            <li><a href="../about.html">about</a></li>
           </div>
 
           <div class="section3">
-            <li><a href="drawings/drawing_whole.html">drawings</a></li>
+            <li><a href="drawing_whole.html"> <img style="width:97px; height:30px;" src="../main_button.png" alt="drawings"> </a></li>
           </div>
 
           <div class="section4">
@@ -35,27 +35,28 @@
           </div>
 
           <div class="section5">
-            <li><a href="songs.html">Songs</a></li>
+            <li><a href="../songs.html">Songs</a></li>
           </div>
 
           <div class="section6">
             <li>Ukgu(c) 2014-2017</li>
           </div>
 
+
         </ul>
       </nav>
     </aside>
 
-    <div class="contents">
-      <img class="contents-image" style="width:800px; height:600px" src="main.jpg" alt="main">
 
-      <div class="contents-text">
-        <p>I wish I was extinct</p>
+    <div class="drawing-contents">
+
+      <div class="drawing-text">
+        <p> <a href="drawing_whole.html">back</a> &nbsp &nbsp <a href="drawing_08.html">previous</a> &nbsp &nbsp <a>next</a> </p>
       </div>
 
-    </div>
+      <img class="drawing-image" src="../drawings_img/009.jpg" alt="009">
 
-  </div>
+    </div>
 
 </body>
 
