--- a/port/songs.html
+++ b/port/songs.html
@@ -17,7 +17,7 @@
       <nav>
         <ul>
           <div class="section1">
-            <li><a href="main.html"> <img style="width:97px; height:30px;" src="main_button.png" alt="Main"> </a></li>
+            <li><a href="main.html">Main</a></li>
           </div>
 
           <div class="section2">
@@ -35,7 +35,7 @@
           </div>
 
           <div class="section5">
-            <li><a href="songs.html">Songs</a></li>
+            <li><a href="songs.html"><img style="width:97px; height:30px;" src="main_button.png" alt="Songs"></a></li>
           </div>
 
           <div class="section6">
@@ -47,12 +47,7 @@
     </aside>
 
     <div class="contents">
-      <img class="contents-image" style="width:800px; height:600px" src="main.jpg" alt="main">
-
-      <div class="contents-text">
-        <p>I wish I was extinct</p>
-      </div>
-
+      <iframe style="margin-top:20px;" width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/325309510&amp;color=%23ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true"></iframe>
     </div>
 
   </div>
