--- a/port/drawings/drawing_02.html
+++ b/port/drawings/drawing_02.html
@@ -51,7 +51,7 @@
     <div class="drawing-contents">
 
       <div class="drawing-text">
-        <p> <a href="drawing_whole.html">back</a> &nbsp &nbsp <a href="drawing_01.html">previous</a> &nbsp &nbsp <a href="drawing_03.html">next</a> </p>
+        <p> <a href="drawing_whole.html">back</a> &nbsp &nbsp  2 of 9 &nbsp &nbsp <a href="drawing_01.html">previous</a> &nbsp &nbsp <a href="drawing_03.html">next</a> </p>
       </div>
 
       <img class="drawing-image" src="../drawings_img/002.jpg" alt="002">
