--- a/port/drawings/drawing_08.html
+++ b/port/drawings/drawing_08.html
@@ -51,7 +51,7 @@
     <div class="drawing-contents">
 
       <div class="drawing-text">
-        <p> <a href="drawing_whole.html">back</a> &nbsp &nbsp <a href="drawing_07.html">previous</a> &nbsp &nbsp <a href="drawing_09.html">next</a> </p>
+        <p> <a href="drawing_whole.html">back</a> &nbsp &nbsp 8 of 9 &nbsp &nbsp  <a href="drawing_07.html">previous</a> &nbsp &nbsp <a href="drawing_09.html">next</a> </p>
       </div>
 
       <img class="drawing-image" src="../drawings_img/008.jpg" alt="008">
