--- a/port/about.html
+++ b/port/about.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>69 international</title>
+  <title>69 international_about</title>
   <link rel="icon" href="favicon-96.png" sizes="96x96">
   <link rel="stylesheet" type="text/css" href="css/layouts.css">
   <link href='//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css' rel='stylesheet' type='text/css'>
