--- a/port/drawings/drawing_01.html
+++ b/port/drawings/drawing_01.html
@@ -1,56 +1,65 @@
-<link rel="stylesheet" type="text/css" href="../css/layouts.css">
-<link href='//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css' rel='stylesheet' type='text/css'>
-</head>
+<!DOCTYPE html>
+<html>
 
-<body>
+  <head>
+    <meta charset="utf-8">
+    <title>69 international</title>
+    <link rel="icon" href="../favicon-96.png" sizes="96x96">
+    <link rel="stylesheet" type="text/css" href="../css/layouts.css">
+    <link href='//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css' rel='stylesheet' type='text/css'>
+  </head>
 
-<div class="grid">
+  <body>
 
-  <aside class="sidebar">
-    <nav>
-      <ul>
-        <div class="section1">
-          <li><a href="../main.html">Main</a></li>
+    <div class="grid">
+
+      <aside class="sidebar">
+        <nav>
+          <ul>
+            <div class="section1">
+              <li><a href="../main.html">Main</a></li>
+            </div>
+
+            <div class="section2">
+              <li><a href="../about.html">about</a></li>
+            </div>
+
+            <div class="section3">
+              <li><a href="drawing_whole.html"> <img style="width:97px; height:30px;" src="../main_button.png" alt="drawings"> </a></li>
+            </div>
+
+            <div class="section4">
+              <li><a>Books</a></li>
+              <li><a>- 50 quetions</a></li>
+              <li><a>- how to write a poem</a></li>
+            </div>
+
+            <div class="section5">
+              <li><a href="../songs.html">Songs</a></li>
+            </div>
+
+            <div class="section6">
+              <li>Ukgu(c) 2014-2017</li>
+            </div>
+
+
+          </ul>
+        </nav>
+      </aside>
+
+
+      <div class="drawing-contents">
+
+        <div class="drawing-text">
+          <p> <a href="drawing_whole.html">back</a> &nbsp &nbsp 1 of 9 &nbsp &nbsp <a>previous</a> &nbsp &nbsp <a href="drawing_02.html">next</a> </p>
         </div>
 
-        <div class="section2">
-          <li><a href="../about.html">about</a></li>
-        </div>
+        <img class="drawing-image" src="../drawings_img/001.jpg" alt="001">
 
-        <div class="section3">
-          <li><a href="drawing_whole.html"> <img style="width:97px; height:30px;" src="../main_button.png" alt="drawings"> </a></li>
-        </div>
+      </div>
 
-        <div class="section4">
-          <li><a>Books</a></li>
-          <li><a>- 50 quetions</a></li>
-          <li><a>- how to write a poem</a></li>
-        </div>
-
-        <div class="section5">
-          <li><a href="../songs.html">Songs</a></li>
-        </div>
-
-        <div class="section6">
-          <li>Ukgu(c) 2014-2017</li>
-        </div>
-
-
-      </ul>
-    </nav>
-  </aside>
-
-
-  <div class="drawing-contents">
-
-    <div class="drawing-text">
-      <p> <a href="drawing_whole.html">back</a> &nbsp &nbsp <a>previous</a> &nbsp &nbsp <a href="drawing_02.html">next</a> </p>
     </div>
 
-    <img class="drawing-image" src="../drawings_img/001.jpg" alt="001">
-
-  </div>
-
-</body>
+  </body>
 
 </html>
