--- a/port/drawings/drawing_03.html
+++ b/port/drawings/drawing_03.html
@@ -51,7 +51,7 @@
     <div class="drawing-contents">
 
       <div class="drawing-text">
-        <p> <a href="drawing_whole.html">back</a> &nbsp &nbsp <a href="drawing_02.html">previous</a> &nbsp &nbsp <a href="drawing_04.html">next</a> </p>
+        <p> <a href="drawing_whole.html">back</a> &nbsp &nbsp  3 of 9 &nbsp &nbsp <a href="drawing_02.html">previous</a> &nbsp &nbsp <a href="drawing_04.html">next</a> </p>
       </div>
 
       <img class="drawing-image" src="../drawings_img/003.jpg" alt="003">
