--- a/port/drawings/drawing_04.html
+++ b/port/drawings/drawing_04.html
@@ -51,7 +51,7 @@
     <div class="drawing-contents">
 
       <div class="drawing-text">
-        <p> <a href="drawing_whole.html">back</a> &nbsp &nbsp <a href="drawing_03.html">previous</a> &nbsp &nbsp <a href="drawing_05.html">next</a> </p>
+        <p> <a href="drawing_whole.html">back</a> &nbsp &nbsp 4 of 9 &nbsp &nbsp <a href="drawing_03.html">previous</a> &nbsp &nbsp <a href="drawing_05.html">next</a> </p>
       </div>
 
       <img class="drawing-image" src="../drawings_img/004.jpg" alt="004">
