--- a/port/drawings/drawing_06.html
+++ b/port/drawings/drawing_06.html
@@ -1,63 +1,63 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-  <meta charset="utf-8">
-  <title>69 international</title>
-  <link rel="icon" href="../favicon-96.png" sizes="96x96">
-  <link rel="stylesheet" type="text/css" href="../css/layouts.css">
-  <link href='//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css' rel='stylesheet' type='text/css'>
+  <head>
+    <meta charset="utf-8">
+    <title>69 international</title>
+    <link rel="icon" href="../favicon-96.png" sizes="96x96">
+    <link rel="stylesheet" type="text/css" href="../css/layouts.css">
+    <link href='//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css' rel='stylesheet' type='text/css'>
   </head>
 
   <body>
 
-  <div class="grid">
+    <div class="grid">
 
-    <aside class="sidebar">
-      <nav>
-        <ul>
-          <div class="section1">
-            <li><a href="../main.html">Main</a></li>
-          </div>
+      <aside class="sidebar">
+        <nav>
+          <ul>
+            <div class="section1">
+              <li><a href="../main.html">Main</a></li>
+            </div>
 
-          <div class="section2">
-            <li><a href="../about.html">about</a></li>
-          </div>
+            <div class="section2">
+              <li><a href="../about.html">about</a></li>
+            </div>
 
-          <div class="section3">
-            <li><a href="drawing_whole.html"> <img style="width:97px; height:30px;" src="../main_button.png" alt="drawings"> </a></li>
-          </div>
+            <div class="section3">
+              <li><a href="drawing_whole.html"> <img style="width:97px; height:30px;" src="../main_button.png" alt="drawings"> </a></li>
+            </div>
 
-          <div class="section4">
-            <li><a>Books</a></li>
-            <li><a>- 50 quetions</a></li>
-            <li><a>- how to write a poem</a></li>
-          </div>
+            <div class="section4">
+              <li><a>Books</a></li>
+              <li><a>- 50 quetions</a></li>
+              <li><a>- how to write a poem</a></li>
+            </div>
 
-          <div class="section5">
-            <li><a href="../songs.html">Songs</a></li>
-          </div>
+            <div class="section5">
+              <li><a href="../songs.html">Songs</a></li>
+            </div>
 
-          <div class="section6">
-            <li>Ukgu(c) 2014-2017</li>
-          </div>
-
-
-        </ul>
-      </nav>
-    </aside>
+            <div class="section6">
+              <li>Ukgu(c) 2014-2017</li>
+            </div>
 
 
-    <div class="drawing-contents">
+          </ul>
+        </nav>
+      </aside>
 
-      <div class="drawing-text">
-        <p> <a href="drawing_whole.html">back</a> &nbsp &nbsp <a href="drawing_05.html">previous</a> &nbsp &nbsp <a href="drawing_07.html">next</a> </p>
+
+      <div class="drawing-contents">
+
+        <div class="drawing-text">
+          <p> <a href="drawing_whole.html">back</a> &nbsp &nbsp 6 of 9 &nbsp &nbsp <a href="drawing_05.html">previous</a> &nbsp &nbsp <a href="drawing_07.html">next</a> </p>
+        </div>
+
+        <img class="drawing-image" style="width:100%" src="../drawings_img/006.jpg" alt="006">
+
       </div>
 
-      <img class="drawing-image" src="../drawings_img/006.jpg" alt="006">
-
-    </div>
-
-</body>
+  </body>
 
 </html>
