--- a/port/drawings/drawing_09.html
+++ b/port/drawings/drawing_09.html
@@ -51,7 +51,7 @@
     <div class="drawing-contents">
 
       <div class="drawing-text">
-        <p> <a href="drawing_whole.html">back</a> &nbsp &nbsp <a href="drawing_08.html">previous</a> &nbsp &nbsp <a>next</a> </p>
+        <p> <a href="drawing_whole.html">back</a> &nbsp &nbsp 9 of 9 &nbsp &nbsp <a href="drawing_08.html">previous</a> &nbsp &nbsp <a>next</a> </p>
       </div>
 
       <img class="drawing-image" src="../drawings_img/009.jpg" alt="009">
