--- a/port/about.html
+++ b/port/about.html
@@ -30,8 +30,8 @@
 
           <div class="section4">
             <li><a>Books</a></li>
-            <li><a>- 50 quetions</a></li>
-            <li><a>- how to write a poem</a></li>
+            <li><a href="books/books_50.html">- 50 quetions</a></li>
+            <li><a href="books/books_poem.html">- how to write a poem</a></li>
           </div>
 
           <div class="section5">
@@ -48,7 +48,7 @@
     </aside>
 
     <div class="contents">
-      <img class="contents-image" style="width:500px; height:500px" src="about.png" alt="about">
+      <img class="contents-image" style="width:500px; height:500px" src="main_img/about.png" alt="about">
 
       <div class="contents-text">
         <p>Ukgu [69]<br/>
