--- a/port/index.html
+++ b/port/index.html
@@ -11,7 +11,7 @@
 
   <div>
     <a href="main.html" title="69 international" target="_self">
-        <img style = "width:80%; height:auto" src = "intro.jpg" alt = "69 international">
+        <img style = "width:80%; height:auto" src = "main_img/intro.jpg" alt = "69 international">
       </a>
   </div>
 
