--- a/port/main.html
+++ b/port/main.html
@@ -30,8 +30,8 @@
 
           <div class="section4">
             <li><a>Books</a></li>
-            <li><a>- 50 quetions</a></li>
-            <li><a>- how to write a poem</a></li>
+            <li><a href="books/books_50.html">- 50 quetions</a></li>
+            <li><a href="books/books_poem.html">- how to write a poem</a></li>
           </div>
 
           <div class="section5">
@@ -47,7 +47,7 @@
     </aside>
 
     <div class="contents">
-      <img class="contents-image" style="width:800px; height:600px" src="main.jpg" alt="main">
+      <img class="contents-image" style="width:800px; height:600px" src="main_img/main.jpg" alt="main">
 
       <div class="contents-text">
         <p>I wish I was extinct</p>
