--- a/port/songs.html
+++ b/port/songs.html
@@ -30,8 +30,8 @@
 
           <div class="section4">
             <li><a>Books</a></li>
-            <li><a>- 50 quetions</a></li>
-            <li><a>- how to write a poem</a></li>
+            <li><a href="books/books_50.html">- 50 quetions</a></li>
+            <li><a href="books/books_poem.html">- how to write a poem</a></li>
           </div>
 
           <div class="section5">
