--- a/port/books/books_poem.html
+++ b/port/books/books_poem.html
@@ -52,10 +52,10 @@
       <div class="drawing-contents">
 
         <div class="drawing-text">
-          <p> <a href="drawing_whole.html">back</a> &nbsp;&nbsp; 1 of 9 &nbsp;&nbsp; <a>previous</a> &nbsp;&nbsp; <a href="drawing_02.html">next</a> </p>
+          <p> <a onclick="poem_count_reset()">back</a> &nbsp;&nbsp; <span id="poem_pg_count">1 of 43</span> &nbsp;&nbsp; <a onclick="poem_count_down()">previous</a> &nbsp;&nbsp; <a onclick="poem_count_up()">next</a> </p>
         </div>
 
-        <img class="drawing-image" src="../drawings_img/001.jpg" alt="001">
+        <img id="poem_img" class="poem-image" src="../books_img/how_to_write_a_poem/01.jpg" alt="01">
 
       </div>
 
