--- a/port/drawings/drawing_whole.html
+++ b/port/drawings/drawing_whole.html
@@ -49,15 +49,17 @@
 
     <div class="drawing-contents">
 
-      <a href="drawing_01.html"><img class="drawing-image" src="../drawings_img/001.jpg" alt="001"></a>
-      <a href="drawing_02.html"><img class="drawing-image" src="../drawings_img/002.jpg" alt="002"></a>
-      <a href="drawing_03.html"><img class="drawing-image" src="../drawings_img/003.jpg" alt="003"></a>
-      <a href="drawing_04.html"><img class="drawing-image" src="../drawings_img/004.jpg" alt="004"></a>
-      <a href="drawing_05.html"><img class="drawing-image" src="../drawings_img/005.jpg" alt="005"></a>
-      <a href="drawing_06.html"><img class="drawing-image" src="../drawings_img/006.jpg" alt="006"></a>
-      <a href="drawing_07.html"><img class="drawing-image" src="../drawings_img/007.jpg" alt="007"></a>
-      <a href="drawing_08.html"><img class="drawing-image" src="../drawings_img/008.jpg" alt="008"></a>
-      <a href="drawing_09.html"><img class="drawing-image" src="../drawings_img/009.jpg" alt="009"></a>
+      <div class="drawings">
+        <a href="drawing_01.html"><img class="drawing-whole" src="../drawings_img/001.jpg" alt="001"></a>
+        <a href="drawing_02.html"><img class="drawing-whole" src="../drawings_img/002.jpg" alt="002"></a>
+        <a href="drawing_03.html"><img class="drawing-whole" src="../drawings_img/003.jpg" alt="003"></a>
+        <a href="drawing_04.html"><img class="drawing-whole" src="../drawings_img/004.jpg" alt="004"></a>
+        <a href="drawing_05.html"><img class="drawing-whole" src="../drawings_img/005.jpg" alt="005"></a>
+        <a href="drawing_06.html"><img class="drawing-whole" src="../drawings_img/006.jpg" alt="006"></a>
+        <a href="drawing_07.html"><img class="drawing-whole" src="../drawings_img/007.jpg" alt="007"></a>
+        <a href="drawing_08.html"><img class="drawing-whole" src="../drawings_img/008.jpg" alt="008"></a>
+        <a href="drawing_09.html"><img class="drawing-whole" src="../drawings_img/009.jpg" alt="009"></a>
+      </div>
 
     </div>
   </div>
