--- a/port/books/books_poem.html
+++ b/port/books/books_poem.html
@@ -55,7 +55,7 @@
           <p> <a onclick="poem_count_reset()">back</a> &nbsp;&nbsp; <span id="poem_pg_count">1 of 43</span> &nbsp;&nbsp; <a onclick="poem_count_down()">previous</a> &nbsp;&nbsp; <a onclick="poem_count_up()">next</a> </p>
         </div>
 
-        <img id="poem_img" class="poem-image" src="../books_img/how_to_write_a_poem/01.jpg" alt="01">
+        <img id="poem_img" class="drawing-image" src="../books_img/how_to_write_a_poem/01.jpg" alt="01">
 
       </div>
 
