--- a/port/drawings/drawing_06.html
+++ b/port/drawings/drawing_06.html
@@ -54,7 +54,7 @@
           <p> <a href="drawing_whole.html">back</a> &nbsp;&nbsp; 6 of 9 &nbsp;&nbsp; <a href="drawing_05.html">previous</a> &nbsp;&nbsp; <a href="drawing_07.html">next</a> </p>
         </div>
 
-        <img class="drawing-image" style="width:100%" src="../drawings_img/006.jpg" alt="006">
+        <img class="drawing-image" src="../drawings_img/006.jpg" alt="006">
 
       </div>
 
