--- a/port/books/books_50.html
+++ b/port/books/books_50.html
@@ -55,7 +55,7 @@
           <p> <a onclick="fifty_count_reset()">back</a> &nbsp;&nbsp; <span id="fifty_pg_count">1 of 20</span> &nbsp;&nbsp; <a onclick="fifty_count_down()">previous</a> &nbsp;&nbsp; <a onclick="fifty_count_up()">next</a> </p>
         </div>
 
-        <img id="fifty_img" class="fifty-image" src="../books_img/50quetions/00.jpg" alt="00">
+        <img id="fifty_img" class="drawing-image" src="../books_img/50quetions/00.jpg" alt="00">
 
       </div>
 
