add animation section and fix spelling

--- a/books/books_50.html
+++ b/books/books_50.html
@@ -31,15 +31,19 @@
 
             <div class="section4">
               <li><a>Books</a></li>
-              <li><a href="books_50.html"> <img style="width:97px; height:25px;" src="../main_button.png" alt="50 quetions"> </a></li>
+              <li><a href="books_50.html"> <img style="width:97px; height:25px;" src="../main_button.png" alt="50 questions"> </a></li>
               <li><a href="books_poem.html">- how to write a poem</a></li>
             </div>
 
             <div class="section5">
-              <li><a href="../songs.html">Songs</a></li>
+              <li><a href="songs.html">Songs</a></li>
             </div>
 
             <div class="section6">
+              <li><a href="https://www.instagram.com/stu69dio/">Animations</a></li>
+            </div>
+
+            <div class="section7">
               <li>Ukgu(c) 2014-2017</li>
             </div>
 
@@ -55,7 +59,7 @@
           <p> <a onclick="fifty_count_reset()">back</a> &nbsp;&nbsp; <span id="fifty_pg_count">1 of 20</span> &nbsp;&nbsp; <a onclick="fifty_count_down()">previous</a> &nbsp;&nbsp; <a onclick="fifty_count_up()">next</a> </p>
         </div>
 
-        <img id="fifty_img" class="drawing-image" src="../books_img/50quetions/00.jpg" alt="00">
+        <img id="fifty_img" class="drawing-image" src="../books_img/50questions/00.jpg" alt="00">
 
       </div>
 
