--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
 
           <div class="section4">
             <li><a>Books</a></li>
-            <li><a href="books/books_50.html">- 50 quetions</a></li>
+            <li><a href="books/books_50.html">- 50 questions</a></li>
             <li><a href="books/books_poem.html">- how to write a poem</a></li>
           </div>
 
@@ -39,6 +39,10 @@
           </div>
 
           <div class="section6">
+            <li><a href="https://www.instagram.com/stu69dio/">Animations</a></li>
+          </div>
+
+          <div class="section7">
             <li>Ukgu(c) 2014-2017</li>
           </div>
 
