add designs tab and remove songs tab

--- a/about.html
+++ b/about.html
@@ -29,13 +29,11 @@
           </div>
 
           <div class="section4">
-            <li><a>Books</a></li>
-            <li><a href="books/books_50.html">- 50 questions</a></li>
-            <li><a href="books/books_poem.html">- how to write a poem</a></li>
+            <li><a href="books/books_whole.html">books</a></li>
           </div>
 
           <div class="section5">
-            <li><a href="songs.html">Songs</a></li>
+            <li><a href="designs/designs_category_whole.html">designs</a></li>
           </div>
 
           <div class="section6">
