--- a/books/books_50.html
+++ b/books/books_50.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="utf-8">
-    <title>69 international_drawings</title>
+    <title>69 international_books</title>
     <link rel="icon" href="../favicon-96.png" sizes="96x96">
     <link rel="stylesheet" type="text/css" href="../css/layouts.css">
     <link href='//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css' rel='stylesheet' type='text/css'>
@@ -30,17 +30,12 @@
             </div>
 
             <div class="section4">
-              <li><a>Books</a></li>
-              <li><a href="books_50.html"> <img style="width:97px; height:25px;" src="../main_button.png" alt="50 questions"> </a></li>
-              <li><a href="books_poem.html">- how to write a poem</a></li>
-              <li><a href="books_cards.html">- essay cards</a></li>
-              <li><a href="books_guide_blue.html">- 달무리 안내서_푸른꿈</a></li>
-              <li><a href="books_guide_red.html">- 달무리 안내서_붉은꿈</a></li>
-              <li><a href="books_guide_gray.html">- 달무리 안내서_재회의꿈</a></li>
+              <li><a href="books_whole.html"> <img style="width:97px; height:25px;" src="../main_button.png" alt="books"> </a></li>
+              <li><a href="books_50.html">-50questions</a></li>
             </div>
 
             <div class="section5">
-              <li><a href="songs.html">Songs</a></li>
+              <li><a href="../designs/designs_category_whole.html">designs</a></li>
             </div>
 
             <div class="section6">
