--- a/main.html
+++ b/main.html
@@ -29,16 +29,14 @@
           </div>
 
           <div class="section4">
-            <li><a>Books</a></li>
-            <li><a href="books/books_50.html">- 50 questions</a></li>
-            <li><a href="books/books_poem.html">- how to write a poem</a></li>
-            <li><a href="books/books_cards.html">- essay cards</a></li>
-            <li><a href="books/books_guide_blue.html">- 달무리 안내서_푸른꿈</a></li>
-            <li><a href="books/books_guide_red.html">- 달무리 안내서_붉은꿈</a></li>
-            <li><a href="books/books_guide_gray.html">- 달무리 안내서_재회의꿈</a></li>
+            <li><a href="books/books_whole.html">books</a></li>
           </div>
 
           <div class="section5">
+            <li><a href="designs/designs_category_whole.html">designs</a></li>
+          </div>
+
+          <div class="section6">
             <li><a href="https://www.instagram.com/stu69dio/">Animations</a></li>
           </div>
 
